--- a/myCSS.css
+++ b/myCSS.css
@@ -31,11 +31,10 @@ body {
 }
 .content {
 	background: #EEEEEE;
-	margin: 0px;
+	margin: 6.9px;
 	float: left;
 	width: 100%;
-	height: 400px;
-	text-align: center;
+	text-align: left;
 }
 .footer {
 	background: #777777;
